--- a/packages/merlin-www-bbcode/sass/wireframe/wireframe.scss
+++ b/packages/merlin-www-bbcode/sass/wireframe/wireframe.scss
@@ -123,35 +123,51 @@ li.bb-gallery__col {
     margin: 0;
     padding: 0;
     position: relative;
+
+    img {
+        bottom: 0;
+        height: 100%;
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
+        width: 100%;
+    }
 }
 
 .bb-gallery__cols--3 {
     .bb-gallery__col:nth-child(1) {
+        padding-top: 66.66666%;
         width: 66.66%;
     }
     .bb-gallery__col:nth-child(2),
     .bb-gallery__col:nth-child(3) {
+        padding-top: 33.33333%;
         width: 33.33%;
     }
 }
 .bb-gallery__cols--4 {
     .bb-gallery__col {
+        padding-top: 50%;
         width: 50%;
     }
 }
 .bb-gallery__cols--5 {
     .bb-gallery__col:nth-child(1) {
+        padding-top: 50%;
         width: 50%;
     }
     .bb-gallery__col:nth-child(2),
     .bb-gallery__col:nth-child(3),
     .bb-gallery__col:nth-child(4),
     .bb-gallery__col:nth-child(5) {
+        padding-top: 25%;
         width: 25%;
     }
 }
 .bb-gallery__cols--6 {
     .bb-gallery__col {
+        padding-top: 33.33333%;
         width: 33.33%;
     }
 }
